--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@ setup.log
 
 # Merlin configuring file for Vim and Emacs
 .merlin
+
+.DS_Store
+
+node_modules/
+
+yarn-error.log
+.vscode/
+
+.projectile
+.ignore
