--- a/ide3/package.json
+++ b/ide3/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@types/codemirror": "^0.0.55",
     "awesome-typescript-loader": "^4.0.1",
+    "brace": "^0.11.1",
     "codemirror": "^5.35.0",
+    "monaco-editor": "^0.11.1",
     "rxjs": "^5.5.7",
     "source-map-loader": "^0.2.3",
     "ts-loader": "^4.0.1",
