--- a/ide3/package.json
+++ b/ide3/package.json
@@ -9,7 +9,12 @@
     "server": "webpack-dev-server"
   },
   "devDependencies": {
+    "autoprefixer": "^8.2.0",
     "css-loader": "^0.28.10",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.3",
+    "precss": "^3.1.2",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.1.1",
@@ -20,9 +25,12 @@
   "dependencies": {
     "@types/codemirror": "^0.0.55",
     "awesome-typescript-loader": "^4.0.1",
+    "bootstrap": "^4.0.0",
     "brace": "^0.11.1",
     "codemirror": "^5.35.0",
+    "jquery": "^3.3.1",
     "monaco-editor": "^0.11.1",
+    "popper.js": "^1.14.1",
     "rxjs": "^5.5.7",
     "source-map-loader": "^0.2.3",
     "ts-loader": "^4.0.1",
