--- a/orcml.opam
+++ b/orcml.opam
@@ -6,7 +6,7 @@ bug-reports: "https://github.com/xorc-io/oam-compiler/issues"
 dev-repo: "https://github.com/xorc-io/oam-compiler"
 license: "Apache-2.0"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
   "base"
