update code to match current version of ecosystem

--- a/src/dune
+++ b/src/dune
@@ -3,15 +3,8 @@
  (public_name orcml)
  (libraries base menhirLib sedlex stdio msgpck sexplib yojson mtime.clock.os)
  (preprocess
-  (pps ppx_jane))
+  (pps sedlex.ppx ppx_jane))
  (flags :standard -w -9 -w -39))
-
-(rule
- (targets lexer.ml)
- (deps
-  (:< lexer.sedlex.ml))
- (action
-  (run %{lib:sedlex:ppx_sedlex} %{<} -o %{targets})))
 
 (rule
  (targets parser_messages.ml)
