--- a/bin/dune
+++ b/bin/dune
@@ -1,7 +1,7 @@
 (executables
  (names orc)
  (libraries orcml orcml_bin_lib orcml_testkit benchmark core async
-   async_extended dynlink)
+   async_interactive dynlink)
  (modules :standard \ orcml_bin_lib)
  (preprocess
   (pps ppx_static ppx_jane))
