--- a/src/dune
+++ b/src/dune
@@ -3,7 +3,7 @@
  (public_name orcml)
  (libraries base menhirLib sedlex stdio msgpck sexplib yojson mtime.clock.os)
  (preprocess
-  (pps sedlex.ppx ppx_jane))
+  (pps sedlex.ppx ppx_jane -allow-unannotated-ignores))
  (flags :standard -w -9 -w -39))
 
 (rule
